# DASH020925

./: .env.example  .gitignore  .migracion_completa  Claude.md  Dockerfile  LISTA_PRECIOS_KOR_V3_original.html  REQUERIMIENTOS_CONEXION.md  actualizar_tabla.py  alembic.ini  conexion_info.md  crear_tabla_imagenes.py  dashboard.py  data.sql  docker-compose.yml  entrypoint.sh  fix-permissions.sh  pyproject.toml  reporte_asociacion_inteligente.json  reporte_sincronizacion.json  requirements-dev.txt  requirements.txt  run.py  setup.sql  setup_user.sql  sincronizar_htmls.py  start.bat  start.sh  start_proxy.bat  test_asociacion_inteligente.py  test_asociacion_visual.py  test_db_connection.py  test_filtro_asociacion_pdf.py  test_filtro_pdf.py  test_imagenes_corregido.py  test_upload_visual.py  test_verificar_imagenes_dashboard.py  verificar_imagenes.py
TEST/: test_acceso_imagenes.py  test_boton_pdf_visual.py  test_campos_db.py  test_gcs_access.py  test_gestion_imagenes_visual.py  test_sistema_imagenes.py  test_visual_dashboard.py
app/: database.py  main.py  models.py
app/components/: login.py  navigation.py  upload.py
app/pages/: 00_login.py  01_inicio.py  02_productos.py  03_contenidos.py  04_precios.py  05_auditoria.py  06_administracion.py
app/services/: audit_service.py  auth_service.py  media_service.py  price_service.py  product_service.py
app/utils/: config.py
bridge/base/: kustomization.yaml  (+7 more)
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
scripts/: db.py  init_storage.py  init_users.py
templates/: dashboard.html  gestion_imagenes.html
(+9 files in other folders)
